// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e0e0e0",
      "borderRadius": 10,
      "color": "#343a40",
      "flexDirection": "row",
      "justifyContent": "center",
      "margin": 5,
      "paddingHorizontal": 10,
      "paddingVertical": 1,
    }
  }
  testID="input-view"
>
  <TextInput
    multiline={false}
    numberOfLines={null}
    placeholderTextColor="#343a40"
    style={
      Object {
        "flex": 1,
      }
    }
    testID="text-input"
    textAlignVertical={null}
  />
</View>
`;

exports[`should render TextInputs css 1`] = `
Object {
  "flex": 1,
}
`;

exports[`should render Views css 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#e0e0e0",
  "borderRadius": 10,
  "color": "#343a40",
  "flexDirection": "row",
  "justifyContent": "center",
  "margin": 5,
  "paddingHorizontal": 10,
  "paddingVertical": 1,
}
`;
